--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@auth/prisma-adapter": "^2.7.2",
     "@line/bot-sdk": "^9.5.0",
     "@line/liff": "^2.25.1",
+    "@line/liff-mock": "^1.0.3",
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "geist": "^1.3.0",
