chore: define liff id env

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ AUTH_SECRET=""
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="postgresql://postgres:password@localhost:5432/oddsnends"
+
+# LINE
+NEXT_PUBLIC_LIFF_ID=""
