--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "vercel": "^39.2.6"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
