--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "@line/bot-sdk": "^9.5.0",
     "@line/liff": "^2.25.1",
     "@line/liff-mock": "^1.0.3",
+    "@neondatabase/serverless": "^0.10.4",
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@vercel/blob": "^0.27.0",
+    "dotenv": "^16.4.7",
     "geist": "^1.3.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
+    "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zod": "^3.23.3"
