--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next-auth": "5.0.0-beta.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "swiper": "^11.2.1",
     "zod": "^3.23.3"
   },
   "devDependencies": {
