--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "typecheck": "tsc --noEmit",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "test": "jest --watch"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
@@ -53,6 +52,7 @@
     "@types/downloadjs": "^1.4.6",
     "@types/eslint": "^8.56.10",
     "@types/jest": "^29.5.14",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -65,6 +65,7 @@
     "html2canvas": "^1.4.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^26.0.0",
     "lucide-react": "^0.474.0",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
@@ -72,6 +73,7 @@
     "prisma": "^5.14.0",
     "swr": "^2.3.0",
     "tailwindcss": "^3.4.3",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.5.3",
     "vercel": "^39.2.6"
   },
