--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@vercel/blob": "^0.27.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "geist": "^1.3.0",
     "lucide-react": "^0.474.0",
@@ -36,9 +37,10 @@
     "next-auth": "5.0.0-beta.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-image-crop": "^11.0.7",
     "react-icons": "^5.4.0",
+    "react-image-crop": "^11.0.7",
     "react-signature-canvas": "^1.0.7",
+    "tailwind-merge": "^3.0.1",
     "zod": "^3.23.3"
   },
   "devDependencies": {
