--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "swiper": "^11.2.2",
     "swr": "^2.3.0",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.2.5",
     "typescript": "^5.5.3",
     "vercel": "^39.2.6"
