--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-image-crop": "^11.0.7",
     "react-signature-canvas": "^1.0.7",
     "swiper": "^11.2.1",
     "zod": "^3.23.3"
