--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@line/liff-mock": "^1.0.3",
     "@neondatabase/serverless": "^0.10.4",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-select": "^2.1.5",
@@ -46,11 +47,11 @@
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-image-crop": "^11.0.7",
     "react-signature-canvas": "^1.0.7",
     "swiper": "^11.2.1",
-    "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
