--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@neondatabase/serverless": "^0.10.4",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-select": "^2.1.5",
