--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -9,7 +9,6 @@ on:
 env:
   NODE_VERSION: "18"
   FRONTEND_DIR: "."
-  # PNPM_VERSION: "9.12.1"
 
 jobs:
   setup:
@@ -46,6 +45,8 @@ jobs:
       - name: Run Lint
         run: pnpm run lint
         working-directory: ${{ env.FRONTEND_DIR }}
+        env:
+          SKIP_ENV_VALIDATION: true
 
   build:
     name: Build Frontend
