--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@line/liff": "^2.25.1",
     "@line/liff-mock": "^1.0.3",
     "@neondatabase/serverless": "^0.10.4",
+    "@next/third-parties": "^15.2.3",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -38,6 +39,7 @@
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^0.27.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
