--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@types/jwt-decode": "^3.1.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^0.27.0",
     "class-variance-authority": "^0.7.1",
@@ -46,6 +47,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "geist": "^1.3.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
