--- a/package.json
+++ b/package.json
@@ -96,10 +96,11 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.2.5",
     "typescript": "^5.5.3",
+    "ua-parser-js": "^2.0.3",
     "vercel": "^39.2.6"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
   },
-  "packageManager": "pnpm@10.7.1"
+  "packageManager": "pnpm@10.8.0"
 }
