chore: add NEXT_PUBLIC_DISABLE_LIFF_LOGIN env

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,8 @@ AUTH_SECRET=""
 
 # LINE
 NEXT_PUBLIC_LIFF_ID=""
+LINE_LOGIN_CHANNEL_ID=
+NEXT_PUBLIC_DISABLE_LIFF_LOGIN= # true = disable liff login, false = enable liff login
 
 BLOB_READ_WRITE_TOKEN=""
 
