--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/eslint": "^8.56.10",
     "@types/jest": "^29.5.14",
     "@types/jsdom": "^21.1.7",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
@@ -95,11 +96,11 @@
     "swr": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-textshadow": "^2.1.3",
     "ts-jest": "^29.2.5",
     "typescript": "^5.5.3",
     "ua-parser-js": "^2.0.3",
-    "vercel": "^39.2.6",
-    "@types/jwt-decode": "^3.1.0"
+    "vercel": "^39.2.6"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
